Content alignment fixed

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body {
 .page-align-center {
   background: pink;
   max-width: 1590px;
+  margin: 0 auto;
   justify-content: center;
 }
 
@@ -30,7 +31,7 @@ body {
 
 .navigation-bar {
   display: flex;
-  padding: 0px 189px;
+  padding: 0px 90px;
   justify-content: space-between;
   align-items: center;
   background: #ffffff;
@@ -71,7 +72,7 @@ header {
 }
 
 .hero-content-wrapper {
-  padding: 25px 80px 50px 187px;
+  padding: 25px 75px 50px 75px;
 }
 .hero-content-wrapper .btn {
   border-radius: 5px;
@@ -194,7 +195,7 @@ footer {
   align-items: center;
   gap: 10px;
   margin-bottom: 20px;
-  padding-left: 170px;
+  padding-left: 60px;
   font-family: Roboto;
   font-size: 14px;
 }
@@ -262,10 +263,9 @@ footer {
 .van-overview {
   margin: 10px;
   padding: 10px;
-
   display: flex;
   justify-content: space-between;
-  gap: 20px;
+  gap: 40px;
 }
 
 .details-container {
@@ -311,6 +311,7 @@ footer {
 
 .van-overview > img {
   border-radius: 5px;
+  border: 1px solid #000;
   width: 600px;
 }
 
@@ -337,7 +338,7 @@ footer {
 }
 
 .breadcrumb-bar {
-  padding: 20px 180px;
+  padding: 20px 80px;
   background: #fafafa;
 }
 
@@ -505,7 +506,7 @@ button {
 
 /* landing page vans styling */
 .homepage__vans__wrapper {
-  max-width: 1320px;
+  max-width: 1200px;
   margin: auto;
   padding-top: 35px;
 }
@@ -517,7 +518,6 @@ button {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-
   padding: 20px 0px 50px 0px;
 }
 
